sfdx-source/LabsActionPlans/main/default/objects/APTemplateTask__c/fields/Promote_to_Case__c.field-meta.xml
<CustomField>
    <fullName>Promote_to_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, create a case from activity record</description>
    <inlineHelpText>Check to create a case</inlineHelpText>
    <label>Promote to Case?</label>
    <type>Checkbox</type>
</CustomField>