sfdx-source/LabsActionPlans/main/default/objects/APTemplateTask__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Topic 1</fullName>
            </value>
            <value>
                <fullName>Topic 4</fullName>
            </value>
            <value>
                <fullName>Topic 2</fullName>
            </value>
            <value>
                <fullName>Topic 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>